## Process this file with automake to produce Makefile.in

zappinghelpdir = $(datadir)/gnome/help/zapping/C
zappinghelp_DATA = \
index.html plugin_devel.html \
properties.html device_info.jpeg general_options.jpeg \
channel_editor.html channel_editor.jpeg \
topic.dat

EXTRA_DIST = $(zappinghelp_DATA)
